# Secunda-test-task

./: .env.example  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 58c038f428ee_add_users.py  917c3703fe1e_.py  a453ef64d072_.py  bd3d29e4df7e_.py  bf198efafcc0_.py  c595c08fcae6_.py  cdcece3e203d_upd_user_model.py  ec75c4f02c93_.py
app/: main.py
app/api/: __init__.py  activities.py  auth.py  buildings.py  organizations.py  users.py
app/api/v1/: handlers.py
app/core/: __init__.py  exception_handlers.py  exceptions.py  security.py
app/dependencies/: __init__.py  auth.py  factories.py  repositories.py  services.py
app/domains/: __init__.py
app/domains/activities/: __init__.py  models.py  repository.py  schemas.py  service.py
app/domains/buildings/: __init__.py  models.py  repository.py  schemas.py  service.py
app/domains/organizations/: __init__.py  models.py  repository.py  schemas.py  service.py
app/domains/users/: models.py  repository.py  schemas.py  service.py
app/domains/users/auth/: repository.py  service.py
app/dtos/: __init__.py  relation_schemas.py
app/exceptions/: exceptions.py
app/infrastructure/: __init__.py
app/infrastructure/db/: __init__.py  accessor.py  association_tables.py
app/settings/: __init__.py  settings.py
